@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-25T16:22:07Z",
-  "count_outdated" : 537,
-  "uniques_outdated" : 310,
-  "count" : 571,
+  "timestamp" : "2022-09-26T01:47:54Z",
+  "count_outdated" : 539,
+  "uniques_outdated" : 311,
+  "count" : 572,
   "uniques" : 329,
   "clones" : [
-    {
-      "timestamp": "2022-09-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-12T00:00:00Z",
       "count": 1,
