@@ -1,3 +1,11 @@
+2022-09-26T01:47:54Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3124528806
+* notice: last 14d: unq all: 5 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 310 537 / 329 571
+* notice: next accum: outdated-unq outdated-all / unq all: 311 539 / 329 572
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-11] / []
+
 2022-09-25T16:22:07Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3122848837
 * notice: last 14d: unq all: 5 34
